--- a/templates/Front/Inline/Product/productFlagsMacro.html.twig
+++ b/templates/Front/Inline/Product/productFlagsMacro.html.twig
@@ -1,20 +1,37 @@
-{% macro list(productFlags, classAddition) %}
+{% macro list(productFlags, classAddition, onlyFirst) %}
 
     {% if productFlags|length > 0 %}
         <div class="in-flag dont-print {{ classAddition }}">
             {% for productFlag in productFlags %}
-                <span
-                    class="in-flag__item
-                    {% if productFlag.name|length == 8 %}
-                        in-flag__item--middle-text
-                    {% elseif productFlag.name|length > 8 %}
-                        in-flag__item--smaller-text
+                {% if onlyFirst %}
+                    {% if loop.first %}
+                        <span
+                            class="in-flag__item
+                            {% if productFlag.name|length == 8 %}
+                                in-flag__item--middle-text
+                            {% elseif productFlag.name|length > 8 %}
+                                in-flag__item--smaller-text
+                            {% endif %}
+                            "
+                            style="background-color: {{ productFlag.rgbColor }};"
+                        >
+                            {{ productFlag.name }}
+                        </span>
                     {% endif %}
-                    "
-                    style="background-color: {{ productFlag.rgbColor }};"
-                >
-                    {{ productFlag.name }}
-                </span>
+                {% else %}
+                    <span
+                        class="in-flag__item
+                        {% if productFlag.name|length == 8 %}
+                            in-flag__item--middle-text
+                        {% elseif productFlag.name|length > 8 %}
+                            in-flag__item--smaller-text
+                        {% endif %}
+                        "
+                        style="background-color: {{ productFlag.rgbColor }};"
+                    >
+                        {{ productFlag.name }}
+                    </span>
+                {% endif %}
             {% endfor %}
         </div>
     {% endif %}
